--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
 <title>Welcome</title>
 <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg1">
+<body class="bg1">    
 <div class="card1">
 <h1>ยินดีต้อนรับ</h1>
 <p>โปรดเลือกการดำเนินการ</p>
 <button class="btn btn-primary1" onclick="goLogin()">เข้าสู่ระบบ</button>
 <button class="btn btn-outline1" onclick="goRegister()">สมัครสมาชิก</button>
+    <nav><p style="font-size: 13px;"><a href="login.html" class="btn">ไปหน้าล็อกอิน</a></p></nav>
 </div>
-<script>
+<script>    
 function goLogin(){
-    window.location.href = "?page=login";
+    window.location.href = "login.html";
 }
 function goRegister(){
-    window.location.href = "?page=register";
+    window.location.href = "register.html";
 }
 </script>
 </body>
