--- a/register.html
+++ b/register.html
@@ -26,7 +26,8 @@
     </div>
 </main>
 
-<script type="module" src="js/config.js"></script>
-<script type="module" src="js/auth.js"></script>
+<script type="module" src="config.js"></script>
+<script type="module" src="auth.js"></script>
 </body>
+
 </html>
