--- a/register.html
+++ b/register.html
@@ -25,8 +25,9 @@
     </div>
     </div>
 </main>
-<script type="module" src="config.js"></script>
-<script type="module" src="auth.js"></script>
+<?!= include('auth'); ?>
+<?!= include('config'); ?>
 </body>
 </html>
+
 
