--- a/register.html
+++ b/register.html
@@ -25,9 +25,10 @@
     </div>
     </div>
 </main>
-<?!= include('auth'); ?>
-<?!= include('config'); ?>
+<script type="module" src="js/config.js"></script>
+<script type="module" src="js/auth.js"></script>
 </body>
 </html>
+
 
 
