--- a/register.html
+++ b/register.html
@@ -25,10 +25,11 @@
     </div>
     </div>
 </main>
-<script type="module" src="js/config.js"></script>
-<script type="module" src="js/auth.js"></script>
+<script type="module" src="config.js"></script>
+<script type="module" src="auth.js"></script>
 </body>
 </html>
+
 
 
 
