--- a/analysis.html
+++ b/analysis.html
@@ -19,7 +19,6 @@ input id="monthSelect" type="month" />
     </nav>
     </div>
 </header>
-
 <main class="container">
     <div class="card">
     <h3>วิเคราะห์รายเดือน</h3>
@@ -36,10 +35,9 @@ input id="monthSelect" type="month" />
     <div id="analysisText" class="muted"></div>
     </div>
 </main>
-
-<script type="module" src="js/config.js"></script>
-<script type="module" src="js/auth.js"></script>
-<script type="module" src="js/api-client.js"></script>
-<script type="module" src="js/analysis.js"></script>
+<script type="module" src="config.js"></script>
+<script type="module" src="auth.js"></script>
+<script type="module" src="api-client.js"></script>
+<script type="module" src="analysis.js"></script>
 </body>
 </html>
