--- a/calendar.html
+++ b/calendar.html
@@ -18,17 +18,15 @@
     </nav>
     </div>
 </header>
-
 <main class="container">
     <div class="card">
     <div id='calendar'></div>
     </div>
 </main>
-
-<script type="module" src="js/config.js"></script>
+<script type="module" src="config.js"></script>
 <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/main.min.js'></script>
-<script type="module" src="js/auth.js"></script>
-<script type="module" src="js/api-client.js"></script>
-<script type="module" src="js/calendar.js"></script>
+<script type="module" src="auth.js"></script>
+<script type="module" src="api-client.js"></script>
+<script type="module" src="calendar.js"></script>
 </body>
 </html>
