--- a/forgot.html
+++ b/forgot.html
@@ -18,8 +18,7 @@
     </div>
     </div>
 </main>
-
-<script type="module" src="js/config.js"></script>
-<script type="module" src="js/auth.js"></script>
+<script type="module" src="config.js"></script>
+<script type="module" src="auth.js"></script>
 </body>
 </html>
