--- a/record.html
+++ b/record.html
@@ -17,7 +17,6 @@
     </nav>
     </div>
 </header>
-
 <main class="container">
     <div class="card">
     <h3>เพิ่มรายการ</h3>
@@ -32,16 +31,14 @@
         <button id="btnSave" class="btn btn-primary">บันทึก</button>
     </div>
     </div>
-
     <div class="card">
     <h3>รายการของคุณ</h3>
     <div id="list" class="list"></div>
     </div>
 </main>
-
-<script type="module" src="js/config.js"></script>
-<script type="module" src="js/auth.js"></script>
-<script type="module" src="js/api-client.js"></script>
-<script type="module" src="js/transactions.js"></script>
+<script type="module" src="config.js"></script>
+<script type="module" src="auth.js"></script>
+<script type="module" src="api-client.js"></script>
+<script type="module" src="transactions.js"></script>
 </body>
 </html>
