--- a/register.html
+++ b/register.html
@@ -25,7 +25,8 @@
     </div>
     </div>
 </main>
-<script type="module" src="config.js"></script>
-<script type="module" src="auth.js"></script>
+<script type="module" src="./config.js"></script>
+<script type="module" src="./auth.js"></script>
 </body>
+
 </html>
