--- a/analysis.html
+++ b/analysis.html
@@ -35,9 +35,9 @@ input id="monthSelect" type="month" />
     <div id="analysisText" class="muted"></div>
     </div>
 </main>
-<script type="module" src="config.js"></script>
-<script type="module" src="auth.js"></script>
-<script type="module" src="api-client.js"></script>
-<script type="module" src="analysis.js"></script>
+<script type="module" src="./config.js"></script>
+<script type="module" src="./auth.js"></script>
+<script type="module" src="./api-client.js"></script>
+<script type="module" src="./analysis.js"></script>
 </body>
 </html>
