--- a/record.html
+++ b/record.html
@@ -36,9 +36,9 @@
     <div id="list" class="list"></div>
     </div>
 </main>
-<script type="module" src="config.js"></script>
-<script type="module" src="auth.js"></script>
-<script type="module" src="api-client.js"></script>
-<script type="module" src="transactions.js"></script>
+<script type="module" src="./config.js"></script>
+<script type="module" src="./auth.js"></script>
+<script type="module" src="./api-client.js"></script>
+<script type="module" src="./transactions.js"></script>
 </body>
 </html>
