--- a/calendar.html
+++ b/calendar.html
@@ -23,10 +23,10 @@
     <div id='calendar'></div>
     </div>
 </main>
-<script type="module" src="config.js"></script>
+<script type="module" src="./config.js"></script>
 <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/main.min.js'></script>
-<script type="module" src="auth.js"></script>
-<script type="module" src="api-client.js"></script>
-<script type="module" src="calendar.js"></script>
+<script type="module" src="./auth.js"></script>
+<script type="module" src="./api-client.js"></script>
+<script type="module" src="./calendar.js"></script>
 </body>
 </html>
