--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
         <a href="forgot.html" class="muted small">ลืมรหัสผ่าน?</a>
         </div>
 </main>
-<script type="module" src="config.js"></script>
-<script type="module" src="auth.js"></script>
+<script type="module" src="./config.js"></script>
+<script type="module" src="./auth.js"></script>
 </body>
 </html>
