--- a/register.html
+++ b/register.html
@@ -25,7 +25,7 @@
     </div>
     </div>
 </main>
-<script type="module" src="./config.js"></script>
-<script type="module" src="./auth.js"></script>
+<script type="module" src="./js/config.js"></script>
+<script type="module" src="./js/auth.js"></script>
 </body>
 </html>
