--- a/login.html
+++ b/login.html
@@ -18,12 +18,12 @@
         <input id="loginPassword" type="password" placeholder="รหัสผ่าน" />
         <div class="row">
         <button id="btnLogin" class="btn btn-primary">เข้าสู่ระบบ</button>
-        <nav><p style="font-size: 13px;"><a href="register.html" class="btn">สมัครสมาชิก</a><p></nav>
+        <nav><p style="font-size: 13px;"><a href="register.html" class="btn">สมัครสมาชิก</a></p></nav>
         </div>
         <div style="margin-top:8px">
         <a href="forgot.html" class="muted small">ลืมรหัสผ่าน?</a>
         </div>
-</main>
+    </div></div></main>
 <script type="module" src="./config.js"></script>
 <script type="module" src="./auth.js"></script>
 </body>
