--- a/analysis.html
+++ b/analysis.html
@@ -21,7 +21,7 @@ input id="monthSelect" type="month" />
 </header>
 <main class="container">
     <div class="card">
-    <h3>วิเคราะห์รายเดือน</h3>
+    <h3>วิเคราะห์รายการ</h3>
     <div class="row">
         <input id="monthSelect" type="month" />
         <button id="btnAnalyze" class="btn btn-primary">วิเคราะห์</button>
