--- a/analysis.html
+++ b/analysis.html
@@ -6,7 +6,7 @@
 input id="monthSelect" type="month" />
 <title>ExpensePro — วิเคราะห์</title>
 <link rel="stylesheet" href="style.css">
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js'></script> 
 </head>
 <body class="bg">
 <header class="topbar">
@@ -25,7 +25,6 @@ input id="monthSelect" type="month" />
     <div class="row">
         <input id="monthSelect" type="month" />
         <button id="btnAnalyze" class="btn btn-primary">วิเคราะห์</button>
-        <button id="btnAnalyze" class="btn btn-primary">วิเคราะห์เดือน</button>
         <button id="btnAnalyzeWeek" class="btn">วิเคราะห์สัปดาห์</button>
     </div>
     <div id="analysisTable"></div>
