--- a/analysis.html
+++ b/analysis.html
@@ -6,7 +6,7 @@
 input id="monthSelect" type="month" />
 <title>ExpensePro — วิเคราะห์</title>
 <link rel="stylesheet" href="style.css">
-<script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js'></script> 
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body class="bg">
 <header class="topbar">
