--- a/record.html
+++ b/record.html
@@ -9,7 +9,7 @@
 <body class="bg">
 <header class="topbar">
     <div class="container topbar-inner">
-    <div class="brand"><h2>Expense<span class="accent">Pro</span> — <span id="displayName"></span></h2></div>
+    <div class="brand"><h2>Expense<span class="accent">Pro</span></span></h2></div>
     <nav>
         <a href="analysis.html">วิเคราะห์</a>
         <a href="calendar.html">ปฏิทิน</a>
