--- a/analysis.html
+++ b/analysis.html
@@ -1,41 +1,42 @@
 <!doctype html>
 <html lang="th">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1"
-input id="monthSelect" type="month" />
-<title>ExpensePro — วิเคราะห์</title>
-<link rel="stylesheet" href="style.css">
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>ExpensePro — วิเคราะห์</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body class="bg">
-<header class="topbar">
-    <div class="container topbar-inner">
-    <div class="brand"><h2>Expense<span class="accent">Pro</span></h2></div>
-    <nav>
-        <a href="record.html">บันทึก</a>
-        <a href="calendar.html">ปฏิทิน</a>
-        <button id="btnLogout" class="btn btn-link">ออกจากระบบ</button>
-    </nav>
-    </div>
-</header>
-<main class="container">
-    <div class="card">
-    <h3>วิเคราะห์รายการ</h3>
-    <div class="row">
-        <input id="monthSelect" type="month" />
-        <button id="btnAnalyze" class="btn btn-primary">วิเคราะห์</button>
-    </div>
-    <div id="analysisTable"></div>
-    <div class="chart-wrap">
-        <canvas id="chart"></canvas>
-    </div>
-    <div id="analysisText" class="muted"></div>
-    </div>
-</main>
-<script type="module" src="./config.js"></script>
-<script type="module" src="./auth.js"></script>
-<script type="module" src="./api-client.js"></script>
-<script type="module" src="./analysis.js"></script>
+    <header class="topbar">
+        <div class="container topbar-inner">
+            <div class="brand"><h2>Expense<span class="accent">Pro</span></h2></div>
+            <nav>
+                <a href="record.html">บันทึก</a>
+                <a href="calendar.html">ปฏิทิน</a>
+                <button id="btnLogout" class="btn btn-link">ออกจากระบบ</button>
+            </nav>
+        </div>
+    </header>
+
+    <main class="container">
+        <div class="card">
+            <h3>วิเคราะห์รายการรายเดือน</h3>
+            <div class="row">
+                <input id="monthSelect" type="month" class="input-control" />
+                <button id="btnAnalyze" class="btn btn-primary">วิเคราะห์</button>
+            </div>
+            
+            <div class="chart-wrap" style="position: relative; height:300px; margin: 20px 0;">
+                <canvas id="chart"></canvas>
+            </div>
+
+            <div id="analysisText" class="muted" style="margin-bottom: 20px;"></div>
+            <div id="analysisTable"></div>
+        </div>
+    </main>
+
+    <script type="module" src="./auth.js"></script>
+    <script type="module" src="./analysis.js"></script>
 </body>
 </html>
