--- a/analysis.html
+++ b/analysis.html
@@ -21,15 +21,14 @@
     <main class="container">
         <div class="card">
             <h3>วิเคราะห์รายการรายเดือน</h3>
-            <div class="row">
-                <input id="monthSelect" type="month" class="input-control" />
-                <button id="btnAnalyze" class="btn btn-primary">วิเคราะห์</button>
+            <div class="row" style="display: flex; gap: 10px; margin-bottom: 20px;">
+                <input id="monthSelect" type="month" class="input-control" style="flex: 1;" />
+                <button id="btnAnalyze" class="btn btn-primary" style="flex: 0 0 120px;">วิเคราะห์</button>
             </div>
-            
-            <div class="chart-wrap" style="position: relative; height:300px; margin: 20px 0;">
+            <div class="chart-wrap" style="position: relative; height:300px; margin-bottom: 30px;">
                 <canvas id="chart"></canvas>
             </div>
-            <div id="analysisText" class="muted" style="margin-bottom: 20px;"></div>
+            <div id="analysisText" style="text-align: center; margin-bottom: 10px; font-size: 1.1em;"></div>
             <div id="analysisTable"></div>
         </div>
     </main>
