--- a/analysis.html
+++ b/analysis.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>ExpensePro — วิเคราะห์</title>
+    <title>Equili — วิเคราะห์</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body class="bg">
     <header class="topbar">
         <div class="container topbar-inner">
-            <div class="brand"><h2>Expense<span class="accent">Pro</span></h2></div>
+            <div class="brand"><h2>Equ<span class="accent">ili</span></h2></div>
             <nav>
                 <a href="record.html">บันทึก</a>
                 <a href="calendar.html">ปฏิทิน</a>
