--- a/register.html
+++ b/register.html
@@ -1,16 +1,16 @@
 <!doctype html>
 <html lang="th">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>ExpensePro — สมัครสมาชิก</title>
-<link rel="stylesheet" href="style.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Equili — สมัครสมาชิก</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg">
 <main class="container">
     <div class="card auth-card">
     <div class="brand">
-        <h1>Expense<span class="accent">Pro</span></h1>
+        <h1>Equ<span class="accent">ili</span></h1>
     </div>
     <div class="col">
         <h2>สมัครสมาชิก</h2>
