--- a/calendar.html
+++ b/calendar.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>ExpensePro — ปฏิทิน</title>
+<title>Equili — ปฏิทิน</title>
 <link rel="stylesheet" href="style.css">
 <link href='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/main.min.css' rel='stylesheet' />
 </head>
 <body class="bg">
 <header class="topbar">
     <div class="container topbar-inner">
-    <div class="brand"><h2>Expense<span class="accent">Pro</span></h2></div>
+    <div class="brand"><h2>Equ<span class="accent">ili</span></h2></div>
     <nav>
         <a href="record.html">บันทึก</a>
         <a href="analysis.html">วิเคราะห์</a>
