--- a/forgot.html
+++ b/forgot.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>ExpensePro — ลืมรหัสผ่าน</title>
+<title>Equili — ลืมรหัสผ่าน</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg">
