--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Welcome</title>
+<title>Welcome to Equili</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg1">
