--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>ExpensePro — เข้าสู่ระบบ</title>
+<title>Equili — เข้าสู่ระบบ</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg">
