--- a/record.html
+++ b/record.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html lang="th">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>ExpensePro — บันทึก</title>
-<link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta charset="utf-8">
+    <title>Equili — บันทึก</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg">
 <header class="topbar">
     <div class="container topbar-inner">
-    <div class="brand"><h2>Expense<span class="accent">Pro</span></span></h2></div>
+    <div class="brand"><h2>Equ<span class="accent">ili</span></span></h2></div>
     <nav>
         <a href="analysis.html">วิเคราะห์</a>
         <a href="calendar.html">ปฏิทิน</a>
