--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 <main class="container">
     <div class="card auth-card">
     <div class="brand">
-        <h1>Expense<span class="accent">Pro</span></h1>
+        <h1>Equ<span class="accent">ili</span></h1>
     </div>
     <div class="col">
         <h2>เข้าสู่ระบบ</h2>
@@ -27,4 +27,5 @@
 <script type="module" src="./config.js"></script>
 <script type="module" src="./auth.js"></script>
 </body>
+
 </html>
