--- a/analysis.html
+++ b/analysis.html
@@ -6,6 +6,7 @@
     <title>Equili — วิเคราะห์</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body class="bg">
     <header class="topbar">
@@ -24,6 +25,12 @@
             <div class="row" style="display: flex; gap: 10px; margin-bottom: 20px;">
                 <input id="monthSelect" type="month" class="input-control" style="flex: 1;" />
                 <button id="btnAnalyze" class="btn btn-primary" style="flex: 0 0 120px;">วิเคราะห์</button>
+            </div>
+            <div style="text-align:center; margin: 20px;">
+                <button id="btnToggleChart" style="padding: 10px 20px; cursor: pointer;">สลับเป็นกราฟวงกลม</butto>
+            </div>
+            <div style="max-width: 500px; margin: auto;">
+                <canvas id="myChart"></canvas>
             </div>
             <div id="analysisText" style="text-align: center; margin-bottom: 10px; font-size: 1.1em;"></div>
             <div id="analysisTable"></div>
