--- a/record.html
+++ b/record.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Equili — บันทึก</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body class="bg">
 <header class="topbar">
