--- a/calendar.html
+++ b/calendar.html
@@ -6,6 +6,7 @@
 <title>Equili — ปฏิทิน</title>
 <link rel="stylesheet" href="style.css">
 <link href='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/main.min.css' rel='stylesheet' />
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body class="bg">
 <header class="topbar">
