--- a/analysis.html
+++ b/analysis.html
@@ -27,7 +27,7 @@
                 <button id="btnAnalyze" class="btn btn-primary" style="flex: 0 0 120px;">วิเคราะห์</button>
             </div>
             <div style="text-align:center; margin: 20px;">
-                <button id="btnToggleChart" style="padding: 10px 20px; cursor: pointer;">สลับเป็นกราฟวงกลม</butto>
+                <button id="btnAnalyze" style="padding: 10px 20px; cursor: pointer;">สลับเป็นกราฟวงกลม</butto>
             </div>
             <div style="max-width: 500px; margin: auto;">
                 <canvas id="myChart"></canvas>
